# bitgreen-node

./: .gitignore  .rustfmt.toml  CONTRIBUTIONS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  bitg-blockchain-crawler.py  docker-compose.yml  dprint.json  fetch.js  index.js  package-lock.json  package.json  rust-toolchain  start.sh
.maintain/: bitg-weight-template.hbs  frame-weight-template
artifacts/: bitgreen-rococo-genesis  bitgreen-rococo-raw.json  types.json
assets/: bytecodes.json  types.json
benchmarks/: index.js
cache-engine/: .env.example  .gitignore  Dockerfile  README.md  api-server.js  bitg-blockchain-crawler-sync.sh  bitg-blockchain-crawler.py  bitg-blockchain-crawler.sh  bitg-cache-server.js  bitg-cache-server.sh  bitgreen-cache-server-install.sh  docker-compose.yml  env.example  fetch.js  index.html  index.js  package-lock.json  package.json  queries.js  readmeX.md  startdb.sh  tsconfig.json
doc/: assets.md  bonds.md  bridge.md  collator_guide.md  dao.md  evm.md  impactactions.md  javascript.md  nft-guide.md  smartcontracts.md  staking.md  validator.md  vcu.md
docs/: development.md
evm-utils/: README.md  evmAddress2substrateAddress.js  package.json  substrateAddress2EvmAddress.js
integration-tests/: README.md  index.js  package-lock.json  vcu.js
modules/currencies/: Cargo.toml
modules/currencies/src/: lib.rs  mock.rs  tests.rs
modules/evm/: Cargo.toml
modules/evm-accounts/: Cargo.toml
modules/evm-accounts/src/: lib.rs  mock.rs  tests.rs
modules/evm/rpc/: Cargo.toml
modules/evm/rpc/runtime_api/: Cargo.toml
modules/evm/rpc/runtime_api/src/: lib.rs
modules/evm/rpc/src/: call_request.rs  evm_api.rs  lib.rs
modules/evm/src/: lib.rs  mock.rs  precompiles.rs  tests.rs
modules/evm/src/runner/: handler.rs  mod.rs  storage_meter.rs
modules/example/: Cargo.toml
modules/example/src/: lib.rs  tests.rs
modules/support/: Cargo.toml
modules/support/src/: lib.rs
modules/transaction_payment/: Cargo.toml
modules/transaction_payment/src/: lib.rs  mock.rs  tests.rs
node/: Cargo.toml
node/service/: Cargo.toml
node/service/src/: chain_spec.rs  client.rs  grandpa_support.rs  lib.rs
node/src/: chain_spec.rs  cli.rs  command.rs  command_helper.rs  main.rs  rpc.rs  service.rs
node/test-service/src/: chain_spec.rs
oracles/: .gitignore  (+11 more)
pallets/assets/: Cargo.toml  README.md
pallets/assets/src/: benchmarking.rs  extra_mutator.rs  functions.rs  impl_fungibles.rs  impl_stored_map.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/bonds/: Cargo.toml
pallets/bonds/src/: lib.rs  mock.rs  tests.rs
pallets/bridge/: Cargo.toml  README.md
pallets/bridge/src/: lib.rs  mock.rs  tests.rs
pallets/carbon-credits/: Cargo.toml  README.md
pallets/carbon-credits-pool/: Cargo.toml  README.md
pallets/carbon-credits-pool/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/carbon-credits/src/: benchmarking.rs  functions.rs  impls.rs  lib.rs  migration.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/claim/: Cargo.toml
pallets/claim/src/: lib.rs
pallets/dex/: Cargo.toml
pallets/dex/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/generalstorage/: Cargo.toml  README.md
pallets/generalstorage/src/: benchmarking.rs  lib.rs  mock.rs
pallets/impact-actions/: Cargo.toml
pallets/impact-actions/src/: lib.rs
pallets/kyc/: Cargo.toml
pallets/kyc/src/: lib.rs  mock.rs  tests.rs
pallets/parachain-staking/: Cargo.toml
pallets/parachain-staking/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/swap/: Cargo.toml  README.md
pallets/swap/src/: lib.rs  mock.rs  tests.rs
pallets/transaction-pause/: Cargo.toml  README.md
pallets/transaction-pause/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/vcu/: Cargo.toml  README.md
pallets/vcu/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/vesting/: Cargo.toml  README.md
pallets/vesting-contract/: Cargo.toml
pallets/vesting-contract/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  pre_validate.rs  tests.rs  weights.rs
pallets/vesting/src/: lib.rs
parachain/: Cargo.toml
parachain/res/rococo/: bitg-parachain-rococo-3000-genesis  bitg-parachain-rococo-3000-raw.json
parachain/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
parachain/src/chain_spec/: rococo.rs
primitives/: Cargo.toml
primitives/rpc/: Pipfile  rpc.py
primitives/src/: carbon_credits.rs  evm.rs  lib.rs  mocks.rs  tests.rs  vcu.rs
primitives/src/carbon_assets/: carbon_credits.rs  carbon_forwards.rs  carbon_shares.rs  donations.rs  mod.rs
runtime/: Cargo.toml
runtime/bitg/: Cargo.toml
runtime/bitg/src/: constants.rs  lib.rs
runtime/bitg/src/weights/: pallet_contracts.rs
runtime/bitgreen/: Cargo.toml
runtime/bitgreen/src/: impls.rs  lib.rs  xcm_config.rs
runtime/bitgreen/src/weights/: paritydb_weights.rs
runtime/common/: Cargo.toml
runtime/common/src/: claims.rs  lib.rs  purchase.rs
runtime/common/src/precompile/: input.rs  mock.rs  mod.rs  multicurrency.rs  schedule_call.rs  state_rent.rs  tests.rs
runtime/kusama/src/: constants.rs
runtime/node/: Cargo.toml
runtime/node/src/: lib.rs
runtime/node/src/benchmarking/: evm_accounts.rs  utils.rs
runtime/parachain/: Cargo.toml
runtime/parachain/src/: lib.rs  xcm_config.rs
runtime/parachain/src/weights/: extrinsic_weights.rs  paritydb_weights.rs  rocksdb_weights.rs
runtime/polkadot/src/: impls.rs  lib.rs
runtime/polkadot/src/weights/: rocksdb_weights.rs
runtime/rococo/: Cargo.toml
runtime/rococo-v1/src/: constants.rs
runtime/rococo/src/: impls.rs  lib.rs  xcm_config.rs
runtime/rococo/src/benchmarking/: evm.rs
runtime/rococo/src/weights/: block_weights.rs  extrinsic_weights.rs
runtime/src/: constants.rs  lib.rs
runtime/src/benchmarking/: evm.rs  utils.rs
runtime/src/weights/: mod.rs  pallet_staking.rs
runtime/test-runtime/src/: constants.rs
runtime/tests/: integration_test.rs
runtime/westend/src/: constants.rs
(+222 files in other folders)
