[profile.release]
panic = 'unwind'

[profile.dev]
split-debuginfo = "unpacked"

[workspace]
members = [
    'node',
    'parachain',
    'runtime/*',
    'pallets/assets',
    'pallets/bridge',
    'pallets/bonds',
    'pallets/impact-actions',
    'pallets/vesting',
    'primitives'
]
exclude = ['rpc']
