[profile.release]
panic = 'unwind'

[profile.dev]
split-debuginfo = "unpacked"

[workspace]
members = [
    'node',
    'parachain',
    'runtime/*',
    'pallets/assets',
    'pallets/claim',
    'pallets/impact-actions',
    'pallets/bonds',
    'pallets/bridge',
    'pallets/vesting',
    'primitives'
]
exclude = ['rpc']
