[profile.release]
panic = 'unwind'

[profile.dev]
split-debuginfo = "unpacked"

[workspace]
members = [
  'parachain',
  'runtime/bitgreen',
  'pallets/carbon-credits',
  'pallets/assets',
  'pallets/dex',
  'pallets/general-storage',
  'pallets/kyc',
  'pallets/vesting-contract',
  'pallets/transaction-pause',
  'primitives',
]
exclude = ['rpc']
