[package]
name = "bitgreen-primitives"
version = "0.0.1"
authors = ['BitGreen <https://www.bitgreen.org>']
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.33", default-features = false }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-std/std",
  "scale-info/std",
  "frame-support/std",
  "cumulus-primitives-core/std",
]
