[package]
authors = ['BitGreen <https://bitg.org>']
edition = '2018'
homepage = 'https://bitg.org'
license = 'Unlicense'
name = 'bitg-node-runtime'
repository = 'https://github.com/bitgreen/bitg-node'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

# local dependencies
pallet-claim ={ default-features = false, version = '0.1.0', path = "../pallets/claim" }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-executive = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0' }
pallet-aura = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-grandpa = { default-features = false, version = '3.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0' }
pallet-sudo = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-transaction-payment = { default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0' }
sp-api = { default-features = false, version = '3.0.0' }
sp-block-builder = { default-features = false, version = '3.0.0' }
sp-consensus-aura = { default-features = false, version = '0.9.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-inherents = { default-features = false, version = '3.0.0' }
sp-offchain = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-session = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-transaction-pool = { default-features = false, version = '3.0.0' }
sp-version = { default-features = false, version = '3.0.0' }
#contract pallet for !Ink smart contracts
pallet-contracts = { default-features = false, version = '3.0.0' }
pallet-contracts-primitives = { default-features = false, version = '3.0.0' }
pallet-contracts-rpc-runtime-api = { default-features = false, version = '3.0.0' }
# democracy pallets
pallet-democracy = { default-features = false, version = '3.0.0' }
pallet-collective = { default-features = false, version = '3.0.0' }
pallet-scheduler = { default-features = false, version = '3.0.0' }
# staking pallets
pallet-session = { default-features = false, version = '3.0.0' }
pallet-staking = { default-features = false, version = '3.0.0' }
pallet-staking-reward-curve = { version = '3.0.0' }
sp-npos-elections  = { default-features = false, version = '3.0.0' }
sp-staking = { default-features = false, version = '3.0.0' }
# POS pallets
babe-primitives = { package = "sp-consensus-babe", default-features = false, version = '0.9' }
pallet-babe = { default-features = false, version = '3.0.0' }
pallet-offences = { default-features = false, version = '3.0.0' }
pallet-authorship  = { default-features = false, version = '3.0.0' }
pallet-im-online = { default-features = false, version = '3.0.0' }
#pallet-election-provider-multi-phase = { path = '../pallets/election-provider-multi-phase', default-features = false, version = '3.0.0' }
# Assets (ERC20 Token)
pallet-assets = { default-features = false, version = '3.0.0' }
# NFT
orml-nft = { default-features = false, version = '0.4.0' }
# secp256k1 Elliptic Curve Library used for "Claim" pallet
k256 = { default-features = false, version = '0.8.1', features= ["ecdsa-core","sha256"] }
# Solidity Smart Contracts - Ethereum Compatible
evm-runtime = { version = "0.21.0", default-features = false }
pallet-evm = { default-features = false, version = '3.0.0' }
pallet-ethereum = { default-features = false, version = '1.0' }
fp-rpc ={ default-features = false, version = '1.0' }
fp-evm = { default-features = false, version = '2.0' }
evm = { default-features = false, version = '0.27' }


[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'pallet-contracts/std',
    'pallet-contracts-primitives/std',
    'pallet-contracts-rpc-runtime-api/std',
    'pallet-democracy/std',
    'pallet-collective/std',
    'pallet-scheduler/std',
    'pallet-session/std',
    'pallet-staking/std', 
    'sp-npos-elections/std',
    'sp-staking/std',
    'pallet-babe/std',
    'babe-primitives/std',
    'pallet-offences/std',
    'pallet-authorship/std',
    'pallet-im-online/std',
    'pallet-assets/std',
    'orml-nft/std',
    'k256/std',
    'pallet-evm/std',
    'pallet-ethereum/std',
    'fp-rpc/std',
    'fp-evm/std',
]
